Fix bug #32930 (class extending DOMDocument doesn't clone properly)